# poly5m

./: .gitignore  CLAUDE.md  Cargo.toml  GUIDE.md  PEAUFINAGE.md  README.md  TICKETS.md  config.example.toml  get_creds.py  grid_search.py
docs/plans/: 2026-02-19-bet-sizing-design.md  2026-02-20-data-collection-design.md  2026-02-20-data-collection-implementation.md  2026-02-20-diagnostic-fixes-design.md  2026-02-20-phase3-design.md  2026-02-20-phase3-implementation.md  2026-02-20-quant-review-phase1-design.md  2026-02-20-quant-review-phase2-design.md
src/: chainlink.rs  exchanges.rs  logger.rs  macro_data.rs  main.rs  polymarket.rs  presets.rs  rtds.rs  strategy.rs
