[package]
name = "poly5m"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "1", features = ["provider-http", "rpc-types", "sol-types", "signer-local"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"
futures = "0.3"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
atty = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
